--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,10 @@
 <resources>
-    <string name="app_name">lesson9</string>
-    <string name="action_add">Add</string>
-    <string name="title_activity_main">MainActivity</string>
+    <string name="app_name">WeatherApp</string>
+    <string name="no_internet_connection">No internet connection</string>
+    <string name="encoding_failure">Unknown input city, plea se try again in English</string>
+    <string name="get_weather_button">Get weather</string>
+    <string name="city_name_hint">Enter a city name</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
